width and color

--- a/test.html
+++ b/test.html
@@ -1,5 +1,11 @@
 <!DOCTYPE thml>
 <html>
+<style type="text/css">
+	h1{
+		width: 60%;
+		border-color: black;
+	}
+</style>
 		<header>
 			<TITLE>
 				Bonjour
