--- a/test.html
+++ b/test.html
@@ -3,7 +3,8 @@
 <style type="text/css">
 	h1{
 		width: 60%;
-		border-color: black;
+		border-color: blue;
+		color: pink;
 	}
 </style>
 		<header>
